testing with Jest

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/webstorm+all,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=webstorm+all,visualstudiocode
 
+node_modules
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
