--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "js-intro",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "devDependencies": {
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1"
   }
 }
